--- a/[IGNORE]/tut1.html
+++ b/[IGNORE]/tut1.html
@@ -20,12 +20,12 @@
 
         <div id="navlist">
             <ul>
-                <li><a href="#" class="active">The Basics</a></li>
-                <li><a href="#">MessageBox</a></li>
-                <li><a href="#">A Simple Windows</a></li>
-                <li><a href="#">Painting With Text</a></li>
-                <li><a href="#">More About Text</a></li>
-                <li><a href="#">Keyboard Input</a></li>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Archives</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="http://www.willr.co.nz">My Site</a></li>
+                <li><a href="http://www.oswd.org">OSWD</a></li>
+                <li><a href="http://www.openwebdesign.org">OWD</a></li>
             </ul>
         </div>
 
@@ -40,16 +40,16 @@
             <p>The code for this code box. It is a class called <code>.code</code></p>
             <div class="code">
                 <pre>#content .code{
-	color: #000000;
-	background: #F4f4f4 url(codenums.png) repeat-y;
-	border: 1px solid #ccc;
-	padding: 1px;
-	padding-left: 25px;
-	font-size: 1em;
-	width: 470px;
-	margin: 2px auto;
-	white-space: nowrap;
-	overflow: auto;}
+						color: #000000;
+						background: #F4f4f4 url(codenums.png) repeat-y;
+						border: 1px solid #ccc;
+						padding: 1px;
+						padding-left: 25px;
+						font-size: 1em;
+						width: 470px;
+						margin: 2px auto;
+						white-space: nowrap;
+						overflow: auto;}
 				</pre>
             </div>
 
@@ -66,6 +66,10 @@
 
         </div>
         <div class="br"></div>
+        <div id="footer">
+            <p class="center">Copyright &copy; 2006 | <a href="#">XHTML</a> | <a href="#">CSS</a> | <a href="http://www.willr.co.nz">design by willr</a></p>
+            <br />
+        </div>
     </div>
 </body>
 
