--- a/[IGNORE]/lesson2.html
+++ b/[IGNORE]/lesson2.html
@@ -5,7 +5,7 @@
 <head>
     <title>ICZELIONS MASM32 Tutorial</title>
     <meta http-equiv="content-type" content="application/xhtml; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" href="./[IGNORE]/style.css" media="screen, tv, projection" />
+    <link rel="stylesheet" type="text/css" href="./style.css" media="screen, tv, projection" />
 </head>
 
 <body>
