--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div id="navlist">
             <ul>
-                <li><a href="./[IGNORE]/lesson1.html" class="active">Lesson 1</a></li>
+                <li><a href="./index.html" class="active">Lesson 1</a></li>
                 <li><a href="./[IGNORE]/lesson2.html">Lesson 2</a></li>
                 <li><a href="./[IGNORE]/lesson3.html">Lesson 3</a></li>
                 <li><a href="./[IGNORE]/lesson4.html">Lesson 4</a></li>
